# drf-starter

./: .dockerignore  .gitignore  docker-compose.yml  env.example  manage.py  pyproject.toml  setup.cfg
app/account/: models.py  serializers.py  views.py
common/: models.py
config/: asgi.py  dev.py  prod.py  settings.py  test.py  urls.py  wsgi.py
config/serv/: asgi.py
config/sgi/: asgi.py  wsgi.py
docker/: Dockerfile
test/: conftest.py  factories.py  test_account.py
tmpl/: asgi.py  settings.py  urls.py  wsgi.py
