[project]
name = ""
version = "0.1.0"
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "django>=4.0.4",
    "djangorestframework>=3.13.1",
    "django-environ>=0.8.1",
    "django-filter>=21.1",
    "djangorestframework-simplejwt>=5.1.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipdb>=0.13.9",
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
